fix(ui): Tooltip - center align text

--- a/packages/ui/src/ui/tooltip/tooltip.module.css
+++ b/packages/ui/src/ui/tooltip/tooltip.module.css
@@ -12,14 +12,14 @@
 
 .tooltip {
   padding: var(--space-xxxsmall) var(--space-xxsmall);
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   background: var(--color-light);
   max-width: 24em;
   color: var(--color-text);
   filter: drop-shadow(var(--shadow-layer));
   will-change: filter;
   font-size: var(--size-xsmall);
-  line-height: var(--space-small);
+  text-align: center;
 }
 
 .arrow svg {
@@ -28,10 +28,10 @@
 }
 
 .tooltipDarkMode {
-  background: var(--color-text);
+  background: var(--color-text-dark);
   color: var(--color-light);
 }
 
 .tooltipDarkMode .arrow svg {
-  fill: var(--color-text);
+  fill: var(--color-text-dark);
 }
